@@ -233,6 +233,48 @@ try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
 >
 > **注意**：虚拟线程不适合 CPU 密集型任务（应继续用平台线程池或 ForkJoinPool）；不要池化虚拟线程（直接创建即可）。
 
+### 虚拟线程遇冷的四个问题
+
+虚拟线程虽在 JDK 21 转正，生产采用却普遍谨慎，主要卡在以下四点：
+
+#### 1. Pinning（钉住）问题
+
+JDK 21 中，虚拟线程在 `synchronized` 块/方法内发生阻塞（I/O、锁等待）时**无法从载体线程卸载**，被"钉"在载体线程上。载体线程默认只有 ≈ CPU 核数个，一旦大量虚拟线程被钉住，并行度骤降，"百万并发"名存实亡。
+
+- **隐蔽**：第三方库内部一行 `synchronized` 就可能触发——MySQL Connector/J（[bug #109346](https://bugs.mysql.com/bug.php?id=109346)）、Snowflake JDBC、早期 Logback 均中过招。
+- **检测**：`-Djdk.tracePinnedThreads=full`，或 JFR 事件 `jdk.VirtualThreadPinned`。
+- **现状**：[JEP 491](https://openjdk.org/jeps/491)（JDK 24，2025-03）已修复——`synchronized` 内阻塞不再钉住载体线程（仅剩 native 栈帧持锁等少数场景仍可 pin）。但 JDK 21 及以下的存量生产环境无法享受该修复，只能把热点路径的 `synchronized` 改为 `ReentrantLock` 规避。
+
+#### 2. ThreadLocal 内存陷阱
+
+ThreadLocal 的生命周期与线程绑定，虚拟线程数量巨大，若用它缓存重量级对象（大缓冲区、`SimpleDateFormat`、连接缓存），百万并发 ≈ **百万份副本同时存活**，内存与 GC 压力剧增。[JEP 444](https://openjdk.org/jeps/444) 官方明确警告此用法。
+
+官方替代品 `ScopedValue`（不可变、作用域绑定、自动清理）在 JDK 21 仅是**预览 API**（[JEP 446](https://openjdk.org/jeps/446)），直到 **JDK 25** 才转正（[JEP 506](https://openjdk.org/jeps/506)）；且迁移需把"随取随用"的 ThreadLocal 改写为"作用域包裹"的结构化代码，对存量系统改造成本不小。
+
+> 对策：虚拟线程中不要用 ThreadLocal 缓存重量级对象；必须用时用完显式 `remove()`。
+
+#### 3. 框架与中间件适配参差不齐
+
+| 组件 | 情况 |
+|---|---|
+| JDBC 驱动 | 阻塞式模型可跑在虚拟线程上，但旧版本内部 `synchronized` 会导致 pinning，需升级到已修复版本 |
+| Redis 客户端 | Jedis 5.x 起将内部 `synchronized` 换为锁；Lettuce 基于 Netty 本身异步，从虚拟线程获益有限 |
+| 日志框架 | 早期 Logback 的 `synchronized` 写日志会 pin（后改为 ReentrantLock）；Log4j2 高并发下也暴露过问题 |
+| Spring Boot | 3.2+ 支持一行开启 `spring.threads.virtual.enabled=true`，但升级 JDK + 审计全部依赖仍是工程量 |
+
+**排查体验痛点**：虚拟线程**默认无名**——`getName()` 返回空字符串（平台线程至少有 `Thread-0`），日志与线程 dump 里满是空名线程，无法定位任务来源（Jetty 为此专门改了默认行为）。命名方式：
+
+```java
+Thread.ofVirtual().name("biz-", 0).start(task);                                    // biz-0, biz-1, ...
+Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("biz-", 0).factory());  // 命名的虚拟线程执行器
+```
+
+#### 4. CPU 密集型场景无效
+
+虚拟线程的全部收益来自"阻塞时挂起、让出载体线程"。CPU 密集任务（图片压缩、加解密、ETL 计算）不阻塞就不会卸载，照常占满 CPU 核，还要额外付出 mount/unmount 调度开销，实测往往更慢。JEP 444 原话：**"Virtual threads are not faster threads"**。
+
+> CPU 密集任务继续用平台线程池（`N + 1`）或 `ForkJoinPool`（见 `ForkJoinPoolTests`），虚拟线程只服务 IO 密集场景。
+
 ---
 
 ## 常见陷阱
@@ -245,12 +287,17 @@ try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
 | 周期任务抛未捕获异常 | 后续周期被静默取消 | 任务体 `try/catch` 全部异常 |
 | `DiscardPolicy` 默认静默 | 任务无声丢失 | 至少用 `CallerRunsPolicy` 或加日志 |
 | 把虚拟线程池化 | 失去轻量优势 | 每任务创建即用 |
+| 虚拟线程在 `synchronized` 内阻塞 I/O | Pinning，并行度骤降 | JDK 24 已修复；JDK 21 用 `ReentrantLock` 规避 |
+| 虚拟线程 ThreadLocal 缓存大对象 | 百万并发 = 百万副本，内存/GC 压力 | 不缓存重量级对象，用完 `remove()` |
+| 虚拟线程默认无名 | 日志/线程 dump 显示空线程名，难定位 | `Thread.ofVirtual().name("prefix-", 0)` |
 
 ---
 
 ## 参考资料
 
 - [JEP 444: Virtual Threads](https://openjdk.org/jeps/444)
+- [JEP 491: Synchronize Virtual Threads without Pinning](https://openjdk.org/jeps/491)（JDK 24 修复 pinning）
+- [JEP 506: Scoped Values](https://openjdk.org/jeps/506)（JDK 25 转正）
 - [Java 并发编程实战](https://jcip.net/)
 - [阿里巴巴 Java 开发手册](https://github.com/alibaba/p3c)
 - JDK `java.util.concurrent` 包文档
